--- a/html/index.html
+++ b/html/index.html
@@ -8,25 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Bem-vindo(a) ao Meu Site</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about">Sobre Mim</a></li>
-                    <li><a href="#skills">Habilidades</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>Bem-vindo(a) ao Meu Site</h1>
     </header>
 
     <main>
-        <section id="about" class="container">
+        <section id="about">
             <h2>Sobre Mim</h2>
             <p>Sou Abner Stelmastchuk Vieira, tenho 25 anos, e trabalho atualmente como Engenheiro de Confiabilidade de Sites para a Ntt Data. Amo tecnologias e estou sempre em busca de novos desafios para aprimorar minhas habilidades e conhecimentos.</p>
         </section>
 
-        <section id="skills" class="container">
+        <section id="skills">
             <h2>Habilidades</h2>
             <ul>
                 <li>Desenvolvimento Web</li>
@@ -39,10 +30,8 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p>Contato: <a href="mailto:abner.vieira@example.com">abner.vieira@example.com</a></p>
-            <p>&copy; 2023 Abner Stelmastchuk Vieira. Todos os direitos reservados.</p>
-        </div>
+        <p>Contato: <a href="mailto:abner.vieira@example.com">abner.vieira@example.com</a></p>
+        <p>&copy; 2023 Abner Stelmastchuk Vieira. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
